<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/d5"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/d5"
        app:cardCornerRadius="@dimen/d5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/d5">

            <TextView
                android:layout_marginBottom="@dimen/d5"
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/text_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/d5"
                app:cardElevation="@dimen/d5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/d5"
                    android:padding="@dimen/d5">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/d5"
                        app:cardCornerRadius="@dimen/d5"
                        app:cardElevation="@dimen/d5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/warn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/d5"
                            android:background="@color/cardview_dark_background"
                            android:gravity="center"
                            android:padding="@dimen/d5"
                            android:textColor="@color/white"
                            android:textSize="19sp" />
                    </androidx.cardview.widget.CardView>

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/app_name"
                        android:hint="@string/address"
                        android:inputType="textAutoComplete"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/c0" />

                    <EditText
                        android:id="@+id/admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/app_name"
                        android:hint="@string/admin"
                        android:inputType="textAutoComplete"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/address" />

                    <EditText
                        android:id="@+id/length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/app_name"
                        android:hint="@string/length"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/admin" />

                    <Button
                        android:id="@+id/starter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/starting"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/length" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/d5"
                android:backgroundTint="@color/material_on_background_disabled"
                app:cardCornerRadius="@dimen/d5"
                app:cardElevation="@dimen/d5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_dashboard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/st"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/app_name"
                        android:background="@color/white"
                        android:hint="@string/start"
                        android:inputType="number"
                        android:textColor="@color/red"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/en"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/app_name"
                        android:background="@color/white"
                        android:hint="@string/end"
                        android:inputType="number"
                        android:textColor="@color/red"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/sp"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d5"
                android:text="@string/specialsearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/c1"
                tools:layout_editor_absoluteY="512dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>